--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,5 @@
             "email": "enzo.nagata@gmail.com"
         }
     ],
-    "minimum-stability": "dev",
-    "require": {
-        "php": ">=5.3.0"
-    }
+    "require": {}
 }
