--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "authors": [
         {
             "name": "Enzo Nagata",
-            "email": "enzo.nagata@gmail.com",
+            "email": "enzo.nagata@gmail.com"
         }
     ],
     "license": "GPL",
