--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
             "email": "enzo.nagata@gmail.com"
         }
     ],
-    "license": "GPL",
+    "license": "PHP-3.01",
     "require": {
         "php": ">=5.4.0"
     },
