--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,8 @@
     "require": {
         "php": ">=5.4.0"
     },
+    "minimum-stability": "dev",
+    "prefer-stable": true,
     "require-dev": {
         "phpunit/phpunit": " 4.8.35"
     }
