--- a/composer.json
+++ b/composer.json
@@ -7,13 +7,5 @@
             "email": "enzo.nagata@gmail.com"
         }
     ],
-    "license": "PHP-3.01",
-    "require": {
-        "php": ">=5.4.0"
-    },
-    "minimum-stability": "dev",
-    "prefer-stable": true,
-    "require-dev": {
-        "phpunit/phpunit": " 4.8.35"
-    }
+    "license": "MIT"
 }
