--- a/composer.json
+++ b/composer.json
@@ -9,5 +9,10 @@
     ],
     "license": "MIT",
     "minimum-stability": "dev",
-    "prefer-stable": true
+    "prefer-stable": true,
+    "autoload": {
+        "psr-4": {
+            "Nagata\\Template\\": ""
+        }
+    }
 }
