--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,9 @@
             "email": "enzo.nagata@gmail.com"
         }
     ],
+    "require": {
+
+    },
     "license": "MIT",
     "minimum-stability": "dev",
     "prefer-stable": true,
