--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     "prefer-stable": true,
     "autoload": {
         "psr-4": {
-            "Nagata\\Template\\": ""
+            "Nagata\\": ""
         }
     }
 }
