Correções de uso

--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,7 @@
     "prefer-stable": true,
     "autoload": {
         "psr-4": {
-            "Nagata\\": "",
-            "Nagata\\Helpers\\":""
+            "Nagata\\": ""
         }
     }
 }
