Fixed directory separator

--- a/composer.json
+++ b/composer.json
@@ -8,10 +8,9 @@
         }
     ],
     "require": {
-
+        "php": ">=7.1.0"
     },
     "license": "MIT",
-    "minimum-stability": "dev",
     "autoload": {
         "psr-4": {
             "Nagata\\": ""
